make.out
reverse_mode_automatic_differentiation.cpp: In constructor ‘constexpr foelsche::rmad::hasId::hasId()’:
reverse_mode_automatic_differentiation.cpp:39:27: error: call to non-‘constexpr’ function ‘std::size_t& _ZTWN8foelsche4rmad5hasId12s_iNextIndexE()’
   39 |                 :m_iIndex(s_iNextIndex++)
      |                           ^~~~~~~~~~~~
reverse_mode_automatic_differentiation.cpp:37:41: note: ‘std::size_t& _ZTWN8foelsche4rmad5hasId12s_iNextIndexE()’ declared here
   37 |         static thread_local std::size_t s_iNextIndex;
      |                                         ^~~~~~~~~~~~
reverse_mode_automatic_differentiation.cpp: In function ‘constexpr const foelsche::rmad::independent<ENUM>& foelsche::rmad::X()’:
reverse_mode_automatic_differentiation.cpp:64:40: error: ‘s’ declared ‘static’ in ‘constexpr’ function
   64 | {       static const independent<ENUM> s;
      |                                        ^
reverse_mode_automatic_differentiation.cpp: In function ‘constexpr const foelsche::rmad::addition<L1, R1>& foelsche::rmad::operator+(const L1&, const R1&)’:
reverse_mode_automatic_differentiation.cpp:92:47: error: ‘s’ declared ‘static’ in ‘constexpr’ function
   92 |         {       static const addition<L1, R1> s(_rL, _rR);
      |                                               ^
reverse_mode_automatic_differentiation.cpp: In function ‘constexpr const foelsche::rmad::subtraction<L1, R1>& foelsche::rmad::operator-(const L1&, const R1&)’:
reverse_mode_automatic_differentiation.cpp:121:50: error: ‘s’ declared ‘static’ in ‘constexpr’ function
  121 |         {       static const subtraction<L1, R1> s(_rL, _rR);
      |                                                  ^
reverse_mode_automatic_differentiation.cpp: In function ‘constexpr const foelsche::rmad::multiplication<L1, R1>& foelsche::rmad::operator*(const L1&, const R1&)’:
reverse_mode_automatic_differentiation.cpp:150:53: error: ‘s’ declared ‘static’ in ‘constexpr’ function
  150 |         {       static const multiplication<L1, R1> s(_rL, _rR);
      |                                                     ^
reverse_mode_automatic_differentiation.cpp: In function ‘constexpr const foelsche::rmad::division<L1, R1>& foelsche::rmad::operator/(const L1&, const R1&)’:
reverse_mode_automatic_differentiation.cpp:179:47: error: ‘s’ declared ‘static’ in ‘constexpr’ function
  179 |         {       static const division<L1, R1> s(_rL, _rR);
      |                                               ^
reverse_mode_automatic_differentiation.cpp: In function ‘constexpr const foelsche::rmad::NONLINEAR<P1, L1>& foelsche::rmad::nonlinear(const L1&)’:
reverse_mode_automatic_differentiation.cpp:205:48: error: ‘s’ declared ‘static’ in ‘constexpr’ function
  205 |         {       static const NONLINEAR<P1, L1> s(_r);
      |                                                ^
